Fix z-index issue in Gutenberg block control panel #2650

--- a/assets/scss/gutenberg-editor-style.scss
+++ b/assets/scss/gutenberg-editor-style.scss
@@ -19,3 +19,9 @@
   @import "gutenberg-editor/layout";
   @import "gutenberg-editor/media-queries";
 }
+
+.interface-complementary-area {
+  .components-panel__header {
+    z-index: 9999;
+  }
+}
